Fix video controls being cut off - reduce container height and scaling

--- a/style.css
+++ b/style.css
@@ -953,7 +953,7 @@ html {
 }
 
 .featured-item.branding .video-container {
-    height: 520px;
+    height: 500px;
 }
 
 .featured-item.micro-content .video-container {
@@ -983,7 +983,7 @@ html {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    transform: scale(1.1);
+    transform: scale(1.05);
     border: none;
 }
 
